--- a/src/components/ui/forms/camposInput/RutInput.astro
+++ b/src/components/ui/forms/camposInput/RutInput.astro
@@ -38,7 +38,5 @@ const { label, id, errorId } = Astro.props;
       </svg>
     </div>
   </div>
-  <p class="mt-2 hidden text-xs text-red-600" id={errorId}>
-    Por favor, ingresa tu RUT.
-  </p>
+<p class="mt-2 text-xs text-red-600" id={errorId}></p>
 </div>
