--- a/src/components/ui/forms/input/EmailInput.astro
+++ b/src/components/ui/forms/input/EmailInput.astro
@@ -46,7 +46,5 @@ interface Props {
     </div>
   </div>
   <!-- Validation message which is hidden by default -->
-  <p class="mt-2 hidden text-xs text-red-600" id={errorId}>
-    Please include a valid email address so we can get back to you
-  </p>
+<p class="mt-2 text-xs text-red-600" id={errorId}></p>
 </div>
