--- a/src/components/ui/forms/input/PasswordInput.astro
+++ b/src/components/ui/forms/input/PasswordInput.astro
@@ -61,7 +61,7 @@ interface Props {
       </svg>
     </div>
   </div>
-  <p class="mt-2 hidden text-xs text-red-600" id={errorId}>
+<p class="mt-2 text-xs text-red-600" id={errorId}></p>
     {content}
-  </p>
+
 </div>
